search added to sell activity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,6 +32,17 @@
             android:layout_marginLeft="15dp"/>
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/load"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/load"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.5"/>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -41,6 +52,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/body_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
@@ -113,6 +125,7 @@
                         android:paddingHorizontal="20dp"
                         android:paddingVertical="10dp"/>
                     <EditText
+                        android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="100"
@@ -152,6 +165,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/mobile_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="+91 8588989697"
@@ -181,10 +195,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:id="@+id/alternate_mobile_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
-                        android:text="8488998888 (Alternate No.)"
+                        android:text="Alternate Mobile No."
                         android:maxLines="1"
                         android:inputType="phone"
                         android:textSize="15sp"
@@ -212,6 +227,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:id="@+id/kyc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
@@ -242,6 +258,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:id="@+id/address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
