--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -19,6 +19,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.appcompat.widget.SearchView
+            android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
