--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -67,6 +67,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
             <de.hdodenhof.circleimageview.CircleImageView
+                android:onClick="chooseImage"
                 android:id="@+id/image"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
@@ -79,6 +80,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
             <ImageView
+                android:onClick="chooseImage"
+                android:id="@+id/edit_image"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/ic_edit"
@@ -129,11 +132,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="100"
-                        android:text="Name"
+                        android:hint="Name"
+                        android:enabled="false"
                         android:maxLines="1"
                         android:textSize="15sp"
                         android:layout_marginLeft="10dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="20dp"
                         android:background="@drawable/boundary_grey_back"/>
@@ -170,7 +174,7 @@
                         android:layout_height="wrap_content"
                         android:text="+91 8588989697"
                         android:textSize="15sp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:layout_weight="100"
                         android:paddingHorizontal="10dp"
                         android:paddingVertical="10dp"/>
@@ -199,15 +203,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
-                        android:text="Alternate Mobile No."
+                        android:hint="Alternate Mobile No."
                         android:maxLines="1"
+                        android:maxLength="10"
                         android:inputType="phone"
                         android:textSize="15sp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="25dp"
                         android:background="@drawable/boundary_grey_back"/>
                     <ImageView
+                        android:id="@+id/edit_alternate_mob"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:src="@drawable/ic_edit"
@@ -231,14 +237,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
-                        android:text="XXXXXXXX (Optional)"
+                        android:hint="XXXXXXXX (Optional)"
                         android:maxLines="1"
                         android:textSize="15sp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="25dp"
                         android:background="@drawable/boundary_grey_back"/>
                     <ImageView
+                        android:id="@+id/edit_kyc"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:src="@drawable/ic_edit"
@@ -262,15 +269,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="20"
-                        android:text="Address"
+                        android:hint="Address"
                         android:gravity="start"
                         android:minLines="3"
                         android:textSize="15sp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="25dp"
                         android:background="@drawable/boundary_grey_back"/>
                     <ImageView
+                        android:id="@+id/edit_address"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:src="@drawable/ic_edit"
@@ -286,6 +294,7 @@
                 android:text="Save Changes"
                 android:textColor="@color/white"
                 android:gravity="center"
+                android:onClick="saveChanges"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/gradient"
                 app:layout_constraintTop_toBottomOf="@id/ll"
