--- a/app/src/main/res/layout/activity_request_detail.xml
+++ b/app/src/main/res/layout/activity_request_detail.xml
@@ -182,6 +182,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Cancel Request"
+        android:onClick="cancelRequest"
         android:textColor="@color/white"
         android:paddingHorizontal="20dp"
         android:background="@drawable/roundbutton"
