--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,24 +38,41 @@
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
                         android:textSize="20sp"/>
-                    <TextView
-                        android:id="@+id/address"
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:id="@+id/shimmer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Home"
-                        android:textSize="16sp"
-                        android:textColor="@color/white"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/loc"
-                        android:layout_marginRight="5dp"/>
-                    <ImageView
-                        android:id="@+id/loc"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_location_white"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"/>
+                        android:layout_marginRight="10dp"
+                        app:shimmer_auto_start="true"
+                        app:shimmer_base_alpha="0.65"
+                        app:shimmer_width_ratio="2"
+                        app:shimmer_colored="false"
+                        android:layout_centerVertical="true">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/address"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Locating..."
+                                android:textStyle="bold"
+                                android:onClick="onClickLocation"
+                                android:textSize="16sp"
+                                android:textColor="@color/white"
+                                android:layout_marginRight="5dp"
+                                android:layout_gravity="bottom"/>
+                            <ImageView
+                                android:id="@+id/loc"
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:layout_gravity="center_vertical"
+                                android:onClick="onClickLocation"
+                                android:src="@drawable/ic_location_white" />
+                        </LinearLayout>
+                    </com.facebook.shimmer.ShimmerFrameLayout>
+
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
