--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".Activities.ProfileActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -239,6 +240,7 @@
                         android:layout_weight="20"
                         android:hint="XXXXXXXX (Optional)"
                         android:maxLines="1"
+                        android:maxLength="12"
                         android:textSize="15sp"
                         android:textColor="@color/black"
                         android:paddingVertical="10dp"
