--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -91,19 +91,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"/>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/cart"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_shopping_cart"
-        android:onClick="goToCartActivity"
-        android:backgroundTint="@color/colorPrimary"
         app:layout_constraintVertical_bias="1"
         app:layout_constraintHorizontal_bias="1"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:onClick="goToCartActivity"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/ic_shopping_cart"
+            android:backgroundTint="@color/colorPrimary"
+            android:layout_alignParentRight="true"/>
+        <TextView
+            android:id="@+id/badge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/red_circle"
+            android:text=""
+            android:layout_marginRight="30dp"
+            android:textSize="10sp"
+            android:elevation="7dp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:padding="2dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"/>
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
