--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,16 +53,29 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
-                <androidx.appcompat.widget.SearchView
+                <LinearLayout
+                    android:id="@+id/search_ll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:iconifiedByDefault="false"
                     android:elevation="10dp"
                     android:layout_weight="50"
                     android:layout_marginBottom="20dp"
-                    app:queryBackground="@drawable/searchbar_back"
-                    android:background="@drawable/searchbar_back"
-                    app:defaultQueryHint="Search vegetables"/>
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="10dp"
+                    android:background="@drawable/searchbar_back">
+                    <ImageView
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:src="@drawable/ic_search"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Search"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center_vertical"/>
+                </LinearLayout>
+
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -168,6 +181,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:background="#e8e8e8"
+
                 android:layout_marginBottom="20dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -179,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:text="Suggested For You"
                 android:textColor="#616161"
-                android:textSize="12sp"
+                android:textSize="17sp"
                 android:background="#e8e8e8"
                 app:layout_constraintVertical_bias="0.0"
                 app:layout_constraintRight_toRightOf="parent"
@@ -187,8 +201,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/sell_ll"
                 android:layout_marginTop="20dp"
-                android:paddingHorizontal="10dp"
-                android:paddingTop="5dp"/>
+                android:layout_marginBottom="10dp"
+                android:paddingHorizontal="15dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="8dp"/>
 
 
             <pl.droidsonroids.gif.GifImageView
@@ -205,19 +221,40 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/cart"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_shopping_cart"
-            android:backgroundTint="@color/colorPrimary"
             app:layout_constraintVertical_bias="1"
             app:layout_constraintHorizontal_bias="1"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="30dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/cart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="30dp"
+                android:src="@drawable/ic_shopping_cart"
+                android:backgroundTint="@color/colorPrimary"
+                android:layout_alignParentRight="true"/>
+            <TextView
+                android:id="@+id/badge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/red_circle"
+                android:text=""
+                android:layout_marginRight="30dp"
+                android:textSize="10sp"
+                android:elevation="7dp"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:padding="2dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"/>
+        </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
