--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -12,12 +12,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recyler_view"
+            android:scrollbars="vertical"
             android:layout_alignParentTop="true"/>
         <pl.droidsonroids.gif.GifImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/load"
             android:id="@+id/load"
+            android:layout_centerInParent="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Requests"
+            android:textSize="16sp"
+            android:visibility="invisible"
+            android:id="@+id/no_requests"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 </FrameLayout>
