--- a/app/src/main/res/layout/offers_temporary.xml
+++ b/app/src/main/res/layout/offers_temporary.xml
@@ -13,9 +13,10 @@
         android:layout_width="224dp"
         android:layout_height="121dp"
         android:layout_marginLeft="20dp"
-        app:cardCornerRadius="25dp"
+        app:cardCornerRadius="8dp"
         app:cardElevation="4dp">
         <RelativeLayout
+            android:id="@+id/veg_offer"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
@@ -37,9 +38,10 @@
             android:layout_width="224dp"
             android:layout_height="121dp"
             android:layout_marginLeft="20dp"
-            app:cardCornerRadius="25dp"
+            app:cardCornerRadius="8dp"
             app:cardElevation="4dp">
             <RelativeLayout
+                android:id="@+id/fruit_offer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <ImageView
@@ -62,9 +64,10 @@
             android:layout_height="121dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            app:cardCornerRadius="25dp"
+            app:cardCornerRadius="8dp"
             app:cardElevation="4dp">
             <RelativeLayout
+                android:id="@+id/crop_offer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <ImageView
