--- a/app/src/main/res/layout/sell_crops_item_layout.xml
+++ b/app/src/main/res/layout/sell_crops_item_layout.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
+    android:id="@+id/parent"
     android:layout_marginVertical="5dp"
     android:layout_marginHorizontal="10dp"
     android:elevation="4dp"
-    android:background="@drawable/searchbar_back">
+    android:background="@drawable/item_not_selected">
 
     <ImageView
         android:id="@+id/image"
@@ -24,7 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,37 +35,61 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@id/image">
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:text="Tomato"/>
-        <LinearLayout
+            android:text="Tomato"
+            android:textSize="15sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"/>
+        <TextView
+            android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="10sp"
-                android:text="Tomato"/>
-            <TextView
-                android:id="@+id/unit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="10sp"
-                android:text="Tomato"/>
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
+            android:textSize="11sp"
+            android:text="Tomato"
+            android:layout_below="@id/name"
+            android:layout_alignParentRight="true"/>
+        <TextView
+            android:id="@+id/unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="Tomato"
+            android:layout_alignBottom="@+id/price"
+            android:layout_alignParentLeft="true"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/add_to_cart_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_1">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="22dp"
+            android:text="Add"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="2dp"
+            android:textColor="@color/white"
+            android:background="@drawable/add_crop_back"
+            android:gravity="center"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/plus_minus_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:clickable="false"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -74,28 +99,30 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/plus"
-            android:layout_width="50dp"
+            android:layout_width="40dp"
             android:layout_height="22dp"
             android:src="@drawable/ic_add_40dp"
             android:background="@drawable/add_crop_back"
-            android:layout_weight="10"/>
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"/>
         <TextView
             android:id="@+id/count"
             android:layout_width="25dp"
             android:layout_height="22dp"
             android:text="2"
-            android:textSize="10sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             android:gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/count_back"/>
+            android:layout_centerInParent="true"/>
         <ImageView
             android:id="@+id/minus"
-            android:layout_width="50dp"
+            android:layout_width="40dp"
             android:layout_height="22dp"
             android:src="@drawable/ic_remove"
             android:background="@drawable/minus_crop_back"
-            android:layout_weight="10"/>
-    </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
